parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> prog
Rule 1     prog -> funcs
Rule 2     prog -> externs funcs
Rule 3     externs -> extern
Rule 4     externs -> extern externs
Rule 5     funcs -> func
Rule 6     funcs -> func funcs
Rule 7     extern -> EXTERN TYPE globid LPAREN RPAREN SEMICOLON
Rule 8     extern -> EXTERN TYPE globid LPAREN tdecls RPAREN SEMICOLON
Rule 9     func -> DEF TYPE globid LPAREN RPAREN blk
Rule 10    func -> DEF TYPE globid LPAREN vdecls RPAREN blk
Rule 11    blk -> LBRACE RBRACE
Rule 12    blk -> LBRACE stmts RBRACE
Rule 13    stmts -> stmt
Rule 14    stmts -> stmt stmts
Rule 15    stmt -> blk
Rule 16    stmt -> RETURN SEMICOLON
Rule 17    stmt -> RETURN exp SEMICOLON
Rule 18    stmt -> vdecl ASSIGN exp SEMICOLON
Rule 19    stmt -> exp SEMICOLON
Rule 20    stmt -> WHILE LPAREN exp RPAREN stmt
Rule 21    stmt -> IF LPAREN exp RPAREN stmt
Rule 22    stmt -> IF LPAREN exp RPAREN stmt ELSE stmt
Rule 23    stmt -> PRINT exp SEMICOLON
Rule 24    stmt -> PRINT slit SEMICOLON
Rule 25    exps -> exp
Rule 26    exps -> exp COMMA exps
Rule 27    exp -> LPAREN exp RPAREN
Rule 28    exp -> binop
Rule 29    exp -> uop
Rule 30    exp -> lit
Rule 31    exp -> varid
Rule 32    exp -> globid LPAREN RPAREN
Rule 33    exp -> globid LPAREN exps RPAREN
Rule 34    binop -> arithOps
Rule 35    binop -> logicOps
Rule 36    binop -> varid ASSIGN exp
Rule 37    binop -> LBRACKET TYPE RBRACKET exp
Rule 38    arithOps -> exp TIMES exp
Rule 39    arithOps -> exp DIVIDE exp
Rule 40    arithOps -> exp PLUS exp
Rule 41    arithOps -> exp MINUS exp
Rule 42    logicOps -> exp EQUAL exp
Rule 43    logicOps -> exp LT exp
Rule 44    logicOps -> exp GT exp
Rule 45    logicOps -> exp AND exp
Rule 46    logicOps -> exp OR exp
Rule 47    uop -> MINUS exp
Rule 48    uop -> NOT exp
Rule 49    lit -> TRUE
Rule 50    lit -> FALSE
Rule 51    lit -> LIT
Rule 52    slit -> SLIT
Rule 53    varid -> VARID
Rule 54    globid -> ID
Rule 55    TYPE -> INT
Rule 56    TYPE -> CINT
Rule 57    TYPE -> FLOAT
Rule 58    TYPE -> BOOL
Rule 59    TYPE -> VOID
Rule 60    TYPE -> REF TYPE
Rule 61    TYPE -> NOALIAS REF TYPE
Rule 62    vdecls -> vdecl
Rule 63    vdecls -> vdecl COMMA vdecls
Rule 64    tdecls -> TYPE
Rule 65    tdecls -> TYPE COMMA tdecls
Rule 66    vdecl -> TYPE varid

Terminals, with rules where they appear

AND                  : 45
ASSIGN               : 18 36
BOOL                 : 58
CINT                 : 56
COMMA                : 26 63 65
DEF                  : 9 10
DIVIDE               : 39
ELSE                 : 22
EQUAL                : 42
EXTERN               : 7 8
FALSE                : 50
FLOAT                : 57
GT                   : 44
ID                   : 54
IF                   : 21 22
INT                  : 55
LBRACE               : 11 12
LBRACKET             : 37
LIT                  : 51
LPAREN               : 7 8 9 10 20 21 22 27 32 33
LT                   : 43
MINUS                : 41 47
NOALIAS              : 61
NOT                  : 48
OR                   : 46
PLUS                 : 40
PRINT                : 23 24
RBRACE               : 11 12
RBRACKET             : 37
REF                  : 60 61
RETURN               : 16 17
RPAREN               : 7 8 9 10 20 21 22 27 32 33
SEMICOLON            : 7 8 16 17 18 19 23 24
SLIT                 : 52
TIMES                : 38
TRUE                 : 49
VARID                : 53
VOID                 : 59
WHILE                : 20
error                : 

Nonterminals, with rules where they appear

TYPE                 : 7 8 9 10 37 60 61 64 65 66
arithOps             : 34
binop                : 28
blk                  : 9 10 15
exp                  : 17 18 19 20 21 22 23 25 26 27 36 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 48
exps                 : 26 33
extern               : 3 4
externs              : 2 4
func                 : 5 6
funcs                : 1 2 6
globid               : 7 8 9 10 32 33
lit                  : 30
logicOps             : 35
prog                 : 0
slit                 : 24
stmt                 : 13 14 20 21 22 22
stmts                : 12 14
tdecls               : 8 65
uop                  : 29
varid                : 31 36 66
vdecl                : 18 62 63
vdecls               : 10 63

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . funcs
    (2) prog -> . externs funcs
    (5) funcs -> . func
    (6) funcs -> . func funcs
    (3) externs -> . extern
    (4) externs -> . extern externs
    (9) func -> . DEF TYPE globid LPAREN RPAREN blk
    (10) func -> . DEF TYPE globid LPAREN vdecls RPAREN blk
    (7) extern -> . EXTERN TYPE globid LPAREN RPAREN SEMICOLON
    (8) extern -> . EXTERN TYPE globid LPAREN tdecls RPAREN SEMICOLON

    DEF             shift and go to state 6
    EXTERN          shift and go to state 7

    prog                           shift and go to state 1
    funcs                          shift and go to state 2
    externs                        shift and go to state 3
    func                           shift and go to state 4
    extern                         shift and go to state 5

state 1

    (0) S' -> prog .



state 2

    (1) prog -> funcs .

    $end            reduce using rule 1 (prog -> funcs .)


state 3

    (2) prog -> externs . funcs
    (5) funcs -> . func
    (6) funcs -> . func funcs
    (9) func -> . DEF TYPE globid LPAREN RPAREN blk
    (10) func -> . DEF TYPE globid LPAREN vdecls RPAREN blk

    DEF             shift and go to state 6

    funcs                          shift and go to state 8
    func                           shift and go to state 4

state 4

    (5) funcs -> func .
    (6) funcs -> func . funcs
    (5) funcs -> . func
    (6) funcs -> . func funcs
    (9) func -> . DEF TYPE globid LPAREN RPAREN blk
    (10) func -> . DEF TYPE globid LPAREN vdecls RPAREN blk

    $end            reduce using rule 5 (funcs -> func .)
    DEF             shift and go to state 6

    func                           shift and go to state 4
    funcs                          shift and go to state 9

state 5

    (3) externs -> extern .
    (4) externs -> extern . externs
    (3) externs -> . extern
    (4) externs -> . extern externs
    (7) extern -> . EXTERN TYPE globid LPAREN RPAREN SEMICOLON
    (8) extern -> . EXTERN TYPE globid LPAREN tdecls RPAREN SEMICOLON

    DEF             reduce using rule 3 (externs -> extern .)
    EXTERN          shift and go to state 7

    extern                         shift and go to state 5
    externs                        shift and go to state 10

state 6

    (9) func -> DEF . TYPE globid LPAREN RPAREN blk
    (10) func -> DEF . TYPE globid LPAREN vdecls RPAREN blk
    (55) TYPE -> . INT
    (56) TYPE -> . CINT
    (57) TYPE -> . FLOAT
    (58) TYPE -> . BOOL
    (59) TYPE -> . VOID
    (60) TYPE -> . REF TYPE
    (61) TYPE -> . NOALIAS REF TYPE

    INT             shift and go to state 12
    CINT            shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    VOID            shift and go to state 16
    REF             shift and go to state 17
    NOALIAS         shift and go to state 18

    TYPE                           shift and go to state 11

state 7

    (7) extern -> EXTERN . TYPE globid LPAREN RPAREN SEMICOLON
    (8) extern -> EXTERN . TYPE globid LPAREN tdecls RPAREN SEMICOLON
    (55) TYPE -> . INT
    (56) TYPE -> . CINT
    (57) TYPE -> . FLOAT
    (58) TYPE -> . BOOL
    (59) TYPE -> . VOID
    (60) TYPE -> . REF TYPE
    (61) TYPE -> . NOALIAS REF TYPE

    INT             shift and go to state 12
    CINT            shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    VOID            shift and go to state 16
    REF             shift and go to state 17
    NOALIAS         shift and go to state 18

    TYPE                           shift and go to state 19

state 8

    (2) prog -> externs funcs .

    $end            reduce using rule 2 (prog -> externs funcs .)


state 9

    (6) funcs -> func funcs .

    $end            reduce using rule 6 (funcs -> func funcs .)


state 10

    (4) externs -> extern externs .

    DEF             reduce using rule 4 (externs -> extern externs .)


state 11

    (9) func -> DEF TYPE . globid LPAREN RPAREN blk
    (10) func -> DEF TYPE . globid LPAREN vdecls RPAREN blk
    (54) globid -> . ID

    ID              shift and go to state 21

    globid                         shift and go to state 20

state 12

    (55) TYPE -> INT .

    ID              reduce using rule 55 (TYPE -> INT .)
    VARID           reduce using rule 55 (TYPE -> INT .)
    COMMA           reduce using rule 55 (TYPE -> INT .)
    RPAREN          reduce using rule 55 (TYPE -> INT .)
    RBRACKET        reduce using rule 55 (TYPE -> INT .)


state 13

    (56) TYPE -> CINT .

    ID              reduce using rule 56 (TYPE -> CINT .)
    VARID           reduce using rule 56 (TYPE -> CINT .)
    COMMA           reduce using rule 56 (TYPE -> CINT .)
    RPAREN          reduce using rule 56 (TYPE -> CINT .)
    RBRACKET        reduce using rule 56 (TYPE -> CINT .)


state 14

    (57) TYPE -> FLOAT .

    ID              reduce using rule 57 (TYPE -> FLOAT .)
    VARID           reduce using rule 57 (TYPE -> FLOAT .)
    COMMA           reduce using rule 57 (TYPE -> FLOAT .)
    RPAREN          reduce using rule 57 (TYPE -> FLOAT .)
    RBRACKET        reduce using rule 57 (TYPE -> FLOAT .)


state 15

    (58) TYPE -> BOOL .

    ID              reduce using rule 58 (TYPE -> BOOL .)
    VARID           reduce using rule 58 (TYPE -> BOOL .)
    COMMA           reduce using rule 58 (TYPE -> BOOL .)
    RPAREN          reduce using rule 58 (TYPE -> BOOL .)
    RBRACKET        reduce using rule 58 (TYPE -> BOOL .)


state 16

    (59) TYPE -> VOID .

    ID              reduce using rule 59 (TYPE -> VOID .)
    VARID           reduce using rule 59 (TYPE -> VOID .)
    COMMA           reduce using rule 59 (TYPE -> VOID .)
    RPAREN          reduce using rule 59 (TYPE -> VOID .)
    RBRACKET        reduce using rule 59 (TYPE -> VOID .)


state 17

    (60) TYPE -> REF . TYPE
    (55) TYPE -> . INT
    (56) TYPE -> . CINT
    (57) TYPE -> . FLOAT
    (58) TYPE -> . BOOL
    (59) TYPE -> . VOID
    (60) TYPE -> . REF TYPE
    (61) TYPE -> . NOALIAS REF TYPE

    INT             shift and go to state 12
    CINT            shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    VOID            shift and go to state 16
    REF             shift and go to state 17
    NOALIAS         shift and go to state 18

    TYPE                           shift and go to state 22

state 18

    (61) TYPE -> NOALIAS . REF TYPE

    REF             shift and go to state 23


state 19

    (7) extern -> EXTERN TYPE . globid LPAREN RPAREN SEMICOLON
    (8) extern -> EXTERN TYPE . globid LPAREN tdecls RPAREN SEMICOLON
    (54) globid -> . ID

    ID              shift and go to state 21

    globid                         shift and go to state 24

state 20

    (9) func -> DEF TYPE globid . LPAREN RPAREN blk
    (10) func -> DEF TYPE globid . LPAREN vdecls RPAREN blk

    LPAREN          shift and go to state 25


state 21

    (54) globid -> ID .

    LPAREN          reduce using rule 54 (globid -> ID .)


state 22

    (60) TYPE -> REF TYPE .

    ID              reduce using rule 60 (TYPE -> REF TYPE .)
    VARID           reduce using rule 60 (TYPE -> REF TYPE .)
    COMMA           reduce using rule 60 (TYPE -> REF TYPE .)
    RPAREN          reduce using rule 60 (TYPE -> REF TYPE .)
    RBRACKET        reduce using rule 60 (TYPE -> REF TYPE .)


state 23

    (61) TYPE -> NOALIAS REF . TYPE
    (55) TYPE -> . INT
    (56) TYPE -> . CINT
    (57) TYPE -> . FLOAT
    (58) TYPE -> . BOOL
    (59) TYPE -> . VOID
    (60) TYPE -> . REF TYPE
    (61) TYPE -> . NOALIAS REF TYPE

    INT             shift and go to state 12
    CINT            shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    VOID            shift and go to state 16
    REF             shift and go to state 17
    NOALIAS         shift and go to state 18

    TYPE                           shift and go to state 26

state 24

    (7) extern -> EXTERN TYPE globid . LPAREN RPAREN SEMICOLON
    (8) extern -> EXTERN TYPE globid . LPAREN tdecls RPAREN SEMICOLON

    LPAREN          shift and go to state 27


state 25

    (9) func -> DEF TYPE globid LPAREN . RPAREN blk
    (10) func -> DEF TYPE globid LPAREN . vdecls RPAREN blk
    (62) vdecls -> . vdecl
    (63) vdecls -> . vdecl COMMA vdecls
    (66) vdecl -> . TYPE varid
    (55) TYPE -> . INT
    (56) TYPE -> . CINT
    (57) TYPE -> . FLOAT
    (58) TYPE -> . BOOL
    (59) TYPE -> . VOID
    (60) TYPE -> . REF TYPE
    (61) TYPE -> . NOALIAS REF TYPE

    RPAREN          shift and go to state 29
    INT             shift and go to state 12
    CINT            shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    VOID            shift and go to state 16
    REF             shift and go to state 17
    NOALIAS         shift and go to state 18

    TYPE                           shift and go to state 28
    vdecls                         shift and go to state 30
    vdecl                          shift and go to state 31

state 26

    (61) TYPE -> NOALIAS REF TYPE .

    ID              reduce using rule 61 (TYPE -> NOALIAS REF TYPE .)
    VARID           reduce using rule 61 (TYPE -> NOALIAS REF TYPE .)
    COMMA           reduce using rule 61 (TYPE -> NOALIAS REF TYPE .)
    RPAREN          reduce using rule 61 (TYPE -> NOALIAS REF TYPE .)
    RBRACKET        reduce using rule 61 (TYPE -> NOALIAS REF TYPE .)


state 27

    (7) extern -> EXTERN TYPE globid LPAREN . RPAREN SEMICOLON
    (8) extern -> EXTERN TYPE globid LPAREN . tdecls RPAREN SEMICOLON
    (64) tdecls -> . TYPE
    (65) tdecls -> . TYPE COMMA tdecls
    (55) TYPE -> . INT
    (56) TYPE -> . CINT
    (57) TYPE -> . FLOAT
    (58) TYPE -> . BOOL
    (59) TYPE -> . VOID
    (60) TYPE -> . REF TYPE
    (61) TYPE -> . NOALIAS REF TYPE

    RPAREN          shift and go to state 33
    INT             shift and go to state 12
    CINT            shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    VOID            shift and go to state 16
    REF             shift and go to state 17
    NOALIAS         shift and go to state 18

    TYPE                           shift and go to state 32
    tdecls                         shift and go to state 34

state 28

    (66) vdecl -> TYPE . varid
    (53) varid -> . VARID

    VARID           shift and go to state 36

    varid                          shift and go to state 35

state 29

    (9) func -> DEF TYPE globid LPAREN RPAREN . blk
    (11) blk -> . LBRACE RBRACE
    (12) blk -> . LBRACE stmts RBRACE

    LBRACE          shift and go to state 38

    blk                            shift and go to state 37

state 30

    (10) func -> DEF TYPE globid LPAREN vdecls . RPAREN blk

    RPAREN          shift and go to state 39


state 31

    (62) vdecls -> vdecl .
    (63) vdecls -> vdecl . COMMA vdecls

    RPAREN          reduce using rule 62 (vdecls -> vdecl .)
    COMMA           shift and go to state 40


state 32

    (64) tdecls -> TYPE .
    (65) tdecls -> TYPE . COMMA tdecls

    RPAREN          reduce using rule 64 (tdecls -> TYPE .)
    COMMA           shift and go to state 41


state 33

    (7) extern -> EXTERN TYPE globid LPAREN RPAREN . SEMICOLON

    SEMICOLON       shift and go to state 42


state 34

    (8) extern -> EXTERN TYPE globid LPAREN tdecls . RPAREN SEMICOLON

    RPAREN          shift and go to state 43


state 35

    (66) vdecl -> TYPE varid .

    COMMA           reduce using rule 66 (vdecl -> TYPE varid .)
    RPAREN          reduce using rule 66 (vdecl -> TYPE varid .)
    ASSIGN          reduce using rule 66 (vdecl -> TYPE varid .)


state 36

    (53) varid -> VARID .

    COMMA           reduce using rule 53 (varid -> VARID .)
    RPAREN          reduce using rule 53 (varid -> VARID .)
    ASSIGN          reduce using rule 53 (varid -> VARID .)
    SEMICOLON       reduce using rule 53 (varid -> VARID .)
    TIMES           reduce using rule 53 (varid -> VARID .)
    DIVIDE          reduce using rule 53 (varid -> VARID .)
    PLUS            reduce using rule 53 (varid -> VARID .)
    MINUS           reduce using rule 53 (varid -> VARID .)
    EQUAL           reduce using rule 53 (varid -> VARID .)
    LT              reduce using rule 53 (varid -> VARID .)
    GT              reduce using rule 53 (varid -> VARID .)
    AND             reduce using rule 53 (varid -> VARID .)
    OR              reduce using rule 53 (varid -> VARID .)


state 37

    (9) func -> DEF TYPE globid LPAREN RPAREN blk .

    DEF             reduce using rule 9 (func -> DEF TYPE globid LPAREN RPAREN blk .)
    $end            reduce using rule 9 (func -> DEF TYPE globid LPAREN RPAREN blk .)


state 38

    (11) blk -> LBRACE . RBRACE
    (12) blk -> LBRACE . stmts RBRACE
    (13) stmts -> . stmt
    (14) stmts -> . stmt stmts
    (15) stmt -> . blk
    (16) stmt -> . RETURN SEMICOLON
    (17) stmt -> . RETURN exp SEMICOLON
    (18) stmt -> . vdecl ASSIGN exp SEMICOLON
    (19) stmt -> . exp SEMICOLON
    (20) stmt -> . WHILE LPAREN exp RPAREN stmt
    (21) stmt -> . IF LPAREN exp RPAREN stmt
    (22) stmt -> . IF LPAREN exp RPAREN stmt ELSE stmt
    (23) stmt -> . PRINT exp SEMICOLON
    (24) stmt -> . PRINT slit SEMICOLON
    (11) blk -> . LBRACE RBRACE
    (12) blk -> . LBRACE stmts RBRACE
    (66) vdecl -> . TYPE varid
    (27) exp -> . LPAREN exp RPAREN
    (28) exp -> . binop
    (29) exp -> . uop
    (30) exp -> . lit
    (31) exp -> . varid
    (32) exp -> . globid LPAREN RPAREN
    (33) exp -> . globid LPAREN exps RPAREN
    (55) TYPE -> . INT
    (56) TYPE -> . CINT
    (57) TYPE -> . FLOAT
    (58) TYPE -> . BOOL
    (59) TYPE -> . VOID
    (60) TYPE -> . REF TYPE
    (61) TYPE -> . NOALIAS REF TYPE
    (34) binop -> . arithOps
    (35) binop -> . logicOps
    (36) binop -> . varid ASSIGN exp
    (37) binop -> . LBRACKET TYPE RBRACKET exp
    (47) uop -> . MINUS exp
    (48) uop -> . NOT exp
    (49) lit -> . TRUE
    (50) lit -> . FALSE
    (51) lit -> . LIT
    (53) varid -> . VARID
    (54) globid -> . ID
    (38) arithOps -> . exp TIMES exp
    (39) arithOps -> . exp DIVIDE exp
    (40) arithOps -> . exp PLUS exp
    (41) arithOps -> . exp MINUS exp
    (42) logicOps -> . exp EQUAL exp
    (43) logicOps -> . exp LT exp
    (44) logicOps -> . exp GT exp
    (45) logicOps -> . exp AND exp
    (46) logicOps -> . exp OR exp

    RBRACE          shift and go to state 44
    RETURN          shift and go to state 48
    WHILE           shift and go to state 51
    IF              shift and go to state 53
    PRINT           shift and go to state 54
    LBRACE          shift and go to state 38
    LPAREN          shift and go to state 52
    INT             shift and go to state 12
    CINT            shift and go to state 13
    FLOAT           shift and go to state 14
    BOOL            shift and go to state 15
    VOID            shift and go to state 16
    REF             shift and go to state 17
    NOALIAS         shift and go to state 18
    LBRACKET        shift and go to state 62
    MINUS           shift and go to state 63
    NOT             shift and go to state 64
    TRUE            shift and go to state 65
    FALSE           shift and go to state 66
    LIT             shift and go to state 67
    VARID           shift and go to state 36
    ID              shift and go to state 21

    stmts                          shift and go to state 45
    stmt                           shift and go to state 46
    blk                            shift and go to state 47
    exp                            shift and go to state 49
    vdecl                          shift and go to state 50
    TYPE                           shift and go to state 28
    varid                          shift and go to state 55
    binop                          shift and go to state 56
    uop                            shift and go to state 57
    lit                            shift and go to state 58
    globid                         shift and go to state 59
    arithOps                       shift and go to state 60
    logicOps                       shift and go to state 61

state 39

    (10) func -> DEF TYPE globid LPAREN vdecls RPAREN . blk
    (11) blk -> . LBRACE RBRACE
    (12) blk -> . LBRACE stmts RBRACE

    LBRACE          shift and go to state 38

    blk                            shift and go to state 68

state 40

    (63) vdecls -> vdecl COMMA . vdecls
    (62) vdecls -> . vdecl
    (63) vdecls -> . vdecl COMMA vdecls
    (66) vdecl -> . TYPE varid
    (55) TYPE -> . INT
    (56) TYPE -> . CINT
    (57) TYPE -> . FLOAT
    (58) TYPE -> . BOOL
    (59) TYPE -> . VOID
    (60) TYPE -> . REF TYPE
    (61) TYPE -> . NOALIAS REF TYPE
